Fix layout shift and update task cursor

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -19,6 +19,8 @@
   margin-bottom: 1rem;
   display: flex;
   justify-content: center;
+  border: 3px solid transparent;
+  cursor: pointer;
 }
 
 .taskImage {
